- Refactoring the script for concept testing - Updating Readme.md

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,4 @@
 /datasets/household_income/data/
 /datasets/liveability/epoch=14-val_lbm_mse=0.03.ckpt
 /datasets/household_income/data/
-/cav_testing.py
+/concepts_testing.py
